--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        ORDER FULFILLMENT
+                        <!-- ORDER FULFILLMENT -->
+                        <span id="fullfillment_new_fullfillment_span"></span>
                     </h3>
                     <p id="fullfillment_new_3pl_order_fullfillment_p"></p>
                     <!-- <p>We handle all shipping and delivery so you can focus on sales and growth.</p> -->
@@ -337,7 +338,8 @@
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        INTEGRATION
+                        <span id="fullfillment_new_integration_span"></span>
+                        <!-- INTEGRATION -->
                     </h3>
                     <p id="fullfillment_new_3pl_integration_p"></p>
                     <!-- <p>Our fulfillment software seamlessly integrates with your sales channels to connect data such as orders, inventory, and more.</p> -->
@@ -345,7 +347,8 @@
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        B2B FULFILLMENT
+                        <span id="fullfillment_new_b2b_fullfillment_span"></span>
+                        <!-- B2B FULFILLMENT -->
                     </h3>
                     <p id="fullfillment_new_3pl_b2b_fullfillment_p"></p>
                     <!-- <p>Our B2B fulfillment service helps you manage EDI-integrated retail orders as well as manual wholesale orders.</p> -->
@@ -353,7 +356,8 @@
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        RETURNS & CUSTOMER SUPPORT
+                        <!-- RETURNS & CUSTOMER SUPPORT -->
+                        <span id="fullfillment_new_returns_customer_support_span"></span>
                     </h3>
                     <p id="fullfillment_new_3pl_returns_customer_support_p"></p>
                     <!-- <p>Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.</p> -->
@@ -361,7 +365,8 @@
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        CUSTOM SHIPPING SUPPLIES
+                        <!-- CUSTOM SHIPPING SUPPLIES -->
+                        <span id="fullfillment_new_custom_shipping_supplies_span"></span>
                     </h3>
                     <p id="fullfillment_new_3pl_customer_shipping_supplies_p"></p>
                     <!-- <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p> -->
