index and howitworks separated

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </ul>
             </aside>
             <nav>
-                <a href="#howitworks" class="current">How it Works</a>
+                <a href="howitworks.html" class="current">How it Works</a>
                 <a href="#production">Production</a>
                 <a href="#logistics">Logistics</a>
                 <a href="#fulfillment">Fulfillment</a>
@@ -90,71 +90,6 @@
         </div>
     </div></header>
     <!-- //Header -->
-
-    <!-- How it works -->
-    <section class="howitworks" id="howitworks">
-        <div class="swiper">
-            <ul class="swiper-wrapper">
-                <li class="swiper-slide">
-
-                    <h2 id="howitworks_li_1_h2"></h2>
-                    <!-- <h3>Keep your focus on growing your sales. Don't let anything else distract you.</h3> -->
-                    <h3 id="howitworks_li_1_h3"></h3>
-                    <!-- <p>ARK WITH GLOBAL will handle complex and confusing processes of product development, 
-                        production, transportation, fulfillment, sales management, and inventory management 
-                        all in one place.</p> -->
-                    <p id="howitworks_li_1_p"></p>
-                    <div id="howitworks_image_1"/>
-                </li>
-                <li class="swiper-slide">
-                    <!-- <h2>Where and how can I bring to life the product I have in mind?</h2> -->
-                    <h2 id="howitworks_li_2_h2"></h2>
-                    <!-- <h3>Can I improve the quality and lower the cost of my products?</h3> -->
-                    <h3 id="howitworks_li_2_h3"></h3>
-                    <!-- <p>With our East Asia branch in China, we provide prompt and accurate  -->
-                        <!-- consultation and services for sampling, production, and quality control.</p> -->
-                    <p id="howitworks_li_2_p"></p>
-                    <div id="howitworks_image_2"/>
-                </li>
-                <li class="swiper-slide">
-                    <!-- <h2>How can I efficiently bring my product 
-                        from the factories abroad? What about the customs?	</h2> -->
-                    <h2 id="howitworks_li_3_h2"></h2>
-                    <!-- <h3>International trade is too complicated and challenging.</h3> -->
-                    <h3 id="howitworks_li_3_h3"></h3>
-                    <!-- <p>Based on the delivery schedule of each finished product, our Logistics team provides fast 
-                        and transparent services for all trade-related tasks, including Ocean & Air freight, Cutoms, 
-                        FDA Processing, and Delivery.</p> -->
-                    <p id="howitworks_li_3_p"></p>
-                    <div id="howitworks_image_3"/>
-                </li>
-                <li class="swiper-slide">
-                    <!-- <h2>I don't have either a warehouse or 
-                        a system. 
-                        What should I do?</h2> -->
-                    <h2 id="howitworks_li_4_h2"></h2>
-                    <!-- <h3>Through ARK WITH warehouses in the USA, China, and Korea, we offer 
-                        global fulfillment services.</h3> -->
-                    <h3 id="howitworks_li_4_h3"></h3>
-                    <!-- <p>Our innovative order management and inventory systems allow real-time management for 
-                        fulfillment services.</p> -->
-                    <p id="howitworks_li_4_p"></p>
-                    <div id="howitworks_image_4"/>
-                </li>
-                <li class="swiper-slide">
-                    <!-- <h2>ONLY ONE COMPANY!</h2> -->
-                    <h2 id="howitworks_li_5_h2"></h2>
-                    <h3 id="howitworks_li_5_h3"></h2>
-                    <!-- <p>ARK WITH GLOBAL is the unparalleled company that offers 
-                        a complete package of product services competitively and all at once.</p> -->
-                    <p id="howitworks_li_5_p"></p>
-                    <div id="howitworks_image_5"/>
-                </li>
-            </ul>
-        </div>
-        <div class="swiper-pagination pagination-how-it-works"></div>
-    </section>
-    <!-- //How it works -->
 
     <!-- Vi -->
     <section id="vi_section" class="vi">
