--- a/howitworks.html
+++ b/howitworks.html
@@ -82,10 +82,10 @@
             </aside>
             <nav>
                 <a href="#howitworks" class="current">How it Works</a>
-                <a href="#production">Production</a>
-                <a href="#logistics">Logistics</a>
-                <a href="#fulfillment">Fulfillment</a>
-                <a href="#management">Management Software</a>
+                <a href="index.html#production">Production</a>
+                <a href="index.html#logistics">Logistics</a>
+                <a href="index.html#fulfillment_new">Fulfillment</a>
+                <a href="index.html#management">Management Software</a>
             </nav>
         </div>
     </div></header>
