--- a/slide_bug_fix_demo/omnichannel.html
+++ b/slide_bug_fix_demo/omnichannel.html
@@ -103,8 +103,8 @@
                     <li class="swiper-slide"><div></li>
                     <li class="swiper-slide"><div></li>
                     <li class="swiper-slide"><div></li>
-                    <li class="swiper-slide"><div></li>
-                    <li class="swiper-slide"><div></li>
+                    <!-- <li class="swiper-slide"><div></li> -->
+
                 </ul>
             </div>
         </div></header>
@@ -113,8 +113,8 @@
                 <li class="swiper-slide"><div></li>
                 <li class="swiper-slide"><div></li>
                 <li class="swiper-slide"><div></li>
-                <li class="swiper-slide"><div></li>
-                <li class="swiper-slide"><div></li>
+                <!-- <li class="swiper-slide"><div></li> -->
+
             </ul>
         </div>
     </section>
