--- a/slide_bug_fix_demo/omnichannel.html
+++ b/slide_bug_fix_demo/omnichannel.html
@@ -103,7 +103,7 @@
                     <li class="swiper-slide"><div></li>
                     <li class="swiper-slide"><div></li>
                     <li class="swiper-slide"><div></li>
-                    <!-- <li class="swiper-slide"><div></li> -->
+                    <li class="swiper-slide"><div></li>
 
                 </ul>
             </div>
@@ -113,6 +113,7 @@
                 <li class="swiper-slide"><div></li>
                 <li class="swiper-slide"><div></li>
                 <li class="swiper-slide"><div></li>
+                <li class="swiper-slide"><div></li>    
                 <!-- <li class="swiper-slide"><div></li> -->
 
             </ul>
