--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     // const controlURL = "ws://127.0.0.1:8011";
     // const dataURL = "ws://127.0.0.1:8012";
     // const controlURL = "wss://13ff-35-198-216-50.ngrok-free.app"
-    const dataURL = "wss://7bbe-34-171-237-49.ngrok-free.app"
+    const dataURL = "wss://3bd7-35-197-128-191.ngrok-free.app"
     let dataSocket;
     let audioContext;
     let mediaStream;
